--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,8 @@
-== README
+Stack Overflow Mimic
+====================
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
 
-Things you may want to cover:
-
-* Ruby version
+**Ruby v.2.2.0**
 
 * System dependencies
 
@@ -20,9 +17,3 @@ Things you may want to cover:
 * Services (job queues, cache servers, search engines, etc.)
 
 * Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
